blueprints/gdc_gemma_gw/gemma-client/manifests/gdc/security/cross-cluster-gateway-ingress.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cross-cluster-gateway-ingress
  namespace: test-project # kpt-set: ${namespace}
  annotations:
    networking.gdc.goog/internal-loadbalancer: "true"
spec:
  rules:
  - host: gemma-gateway.shared-services.gdc.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gemma-gateway
            port:
              number: 80
